<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symptom_title"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/symptom_instruction"
            android:textSize="15sp"
            android:textColor="@android:color/background_dark"
            android:gravity="start"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/physical"
        android:textSize="23sp"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"/>


    <!--Physical Linear Layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <!--HeadAche Layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:text="@string/headache"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                />

            <RadioGroup
                android:id="@+id/radioGrp_headache"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <RadioButton
                    android:id="@+id/rdBtn_yes_headache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@android:color/background_dark"/>

                <RadioButton
                    android:id="@+id/rdBtn_no_headache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="4dp"
                    />

            </RadioGroup>

        </LinearLayout>

        <!--Nausea Layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:text="@string/nausea"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                />

            <RadioGroup
                android:id="@+id/radioGrp_nausea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdBtn_yes_nausea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@android:color/background_dark"/>

                <RadioButton
                    android:id="@+id/rdBtn_no_nausea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="4dp"
                    />

            </RadioGroup>

        </LinearLayout>

        <!--vomiting Layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:text="@string/vomiting"
                android:textSize="20sp"
                android:textColor="@android:color/background_dark"
                />

            <RadioGroup
                android:id="@+id/radioGrp_vomiting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdBtn_yes_vomiting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@android:color/background_dark"/>

                <RadioButton
                    android:id="@+id/rdBtn_no_vomiting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="4dp"
                    />

            </RadioGroup>

        </LinearLayout>

        <!--visual problem Layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:text="@string/visualProblem"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                />

            <RadioGroup
                android:id="@+id/radioGrp_visualProblem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdBtn_yes_visualProblem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/rdBtn_no_visualProblem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="4dp"
                    />

            </RadioGroup>

        </LinearLayout>

        <!--Numbness Layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:text="@string/numbness"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                />


            <RadioGroup
                android:id="@+id/radioGrp_numbness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rdBtn_yes_numbness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textColor="@android:color/background_dark"
                    />

                <RadioButton
                    android:id="@+id/rdBtn_no_numbness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@android:color/background_dark"
                    android:layout_marginLeft="4dp"
                    />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_next_symptoms"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="Next"
                android:textColor="@android:color/background_dark"
                />
        </LinearLayout>
        <!--physical symptoms layout-->
    </LinearLayout>


</LinearLayout>
</ScrollView>