<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symptoms_summary"
            android:textSize="25sp"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>


        <!--Summary Linear Layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"

                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:padding="5dp"
                    android:text="@string/symptom_name"
                    android:textStyle="bold"
                    android:textColor="@android:color/background_dark"
                    android:textSize="22sp"
                    android:background="@android:color/darker_gray"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/symptom_totalYes"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:background="@android:color/darker_gray"
                    />

            </LinearLayout>


            <!--Physical  Layout-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:text="@string/physical"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/summary_physical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />

            </LinearLayout>

            <!--Cognitive Layout-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:text="@string/cognitive"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/summary_cognitive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />

            </LinearLayout>

            <!-- Emotional Layout-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:text="@string/emotional"
                    android:textSize="20sp"
                    android:textColor="@android:color/background_dark"
                    />

                <TextView
                    android:id="@+id/summary_emotional"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />

            </LinearLayout>

            <!-- sleep-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:text="@string/sleep"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/summary_sleep"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />


            </LinearLayout>




            <!--Summary layout-->
        </LinearLayout>


    </LinearLayout>
</ScrollView>