<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emotional"
            android:textSize="23sp"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>


        <!--emotional Linear Layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <!--irritability  Layout-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:paddingLeft="5dp"
                    android:paddingRight="2dp"
                    android:text="@string/irritability"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />

                <RadioGroup
                    android:id="@+id/radioGrp_irritability"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal" android:gravity="center_vertical">
                    <RadioButton
                        android:id="@+id/rdBtn_yes_irritability"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="@android:color/background_dark"/>

                    <RadioButton
                        android:id="@+id/rdBtn_no_irritability"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@android:color/background_dark"
                        android:layout_marginLeft="4dp"
                        />

                </RadioGroup>

            </LinearLayout>

            <!--sadness down Layout-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:paddingLeft="5dp"
                    android:paddingRight="2dp"
                    android:text="@string/sadness"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />

                <RadioGroup
                    android:id="@+id/radioGrp_sadness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rdBtn_yes_sadness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="@android:color/background_dark"/>

                    <RadioButton
                        android:id="@+id/rdBtn_no_sadness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@android:color/background_dark"
                        android:layout_marginLeft="4dp"
                        />

                </RadioGroup>

            </LinearLayout>

            <!--more emotional Layout-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:paddingLeft="5dp"
                    android:paddingRight="2dp"
                    android:text="@string/more_emotional"
                    android:textSize="20sp"
                    android:textColor="@android:color/background_dark"
                    />

                <RadioGroup
                    android:id="@+id/radioGrp_more_emotional"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rdBtn_yes_more_emotional"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="@android:color/background_dark"/>

                    <RadioButton
                        android:id="@+id/rdBtn_no_more_emotional"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@android:color/background_dark"
                        android:layout_marginLeft="4dp"
                        />

                </RadioGroup>

            </LinearLayout>

            <!-- Nervousness Layout-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:paddingLeft="5dp"
                    android:paddingRight="2dp"
                    android:text="@string/nervousness"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    />

                <RadioGroup
                    android:id="@+id/radioGrp_nervousness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rdBtn_yes_nervousness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/rdBtn_no_nervousness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@android:color/background_dark"
                        android:layout_marginLeft="4dp"
                        />

                </RadioGroup>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_next_symptoms"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:text="Next"
                    android:textColor="@android:color/background_dark"
                    />
            </LinearLayout>
            <!--emotional symptoms layout-->
        </LinearLayout>


    </LinearLayout>
</ScrollView>